--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>canvas</title>
     <style>
-      canvas {
+      * {
         margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
     </style>
   </head>
   <body>
-
     <script src="./index.js"></script>
   </body>
 </html>
