collision game added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>canvas</title>
     <style>
       * {
@@ -10,9 +11,13 @@
         padding: 0;
         box-sizing: border-box;
       }
+      img {
+        display: none;
+      }
     </style>
   </head>
   <body>
+    <img id="ball" src="./assets/2308-w030-n003-800B-p15-800.png" alt="ball" />
     <script src="./index.js"></script>
   </body>
 </html>
