sprite animation page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </style>
   </head>
   <body>
-    <img id="ball" src="./assets/2308-w030-n003-800B-p15-800.png" alt="ball" />
+    <img
+      id="adventurerHigh"
+      src="./assets/adventurer-Sheet-high.png"
+      alt="adventurer"
+    />
     <script src="./index.js"></script>
   </body>
 </html>
